# http_client_cpp

backend/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  rewrite.py  vcpkg-configuration.json  vcpkg.json
backend/include/: httplib.h
backend/lib/: index_html.h  parse.h
backend/src/: main.cpp
backend/utils/: createSchema.sql  deleteRequest.sql  drobTable.sql  emptyTable.sql  getRequests.sql  populate.sql  queries.sql
ui/: index.html  package-lock.json  package.json  parse.py  vite.config.ts
ui/public/: requests.json
ui/src/: App.css  App.tsx  global.d.ts  index.css
ui/src/components/: ReqListSideBar.tsx  ReqSideBar.tsx  ResNav.tsx  SendReqBar.tsx  SendReqNav.tsx
